Fixed ticket details page, subscription page, table headers dark mode colors reflect accurately.  Fixed font color issue on tickets.

--- a/status/static/css/style.css
+++ b/status/static/css/style.css
@@ -15,6 +15,7 @@ html, body {
     color: white;
 }
 
+
 .navbar {
     font-family: 'Fira Sans', sans-serif;
 }
@@ -26,9 +27,20 @@ html, body {
 
 .eventDarkMode {
     filter:invert(100);
-    background-color: #333333;
-    color: white;
+    background-color: #333333 !important;
+    color: #ddd !important;
 }
+
+.eventDarkMode span {
+    color: #ddd !important;
+}
+
+.tableHeaderDM {
+    background-color: #CCCCCC !important;
+    color: #000;
+}
+
+
 
 .link {
     color: #0373fc;
@@ -108,6 +120,10 @@ a:hover {
 
 #list_of_services_data {
     overflow: hidden;
+}
+
+#list_of_services_heading {
+    background-color: #E9ECEF;
 }
 
 #specific_service {
